--- a/AppMonitor/src/main/res/layout/activity_monitor_main.xml
+++ b/AppMonitor/src/main/res/layout/activity_monitor_main.xml
@@ -82,6 +82,20 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_crash_monitor"/>
 
+        <com.yc.roundcorner.view.RoundTextView
+            android:id="@+id/tv_net_speed"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="left|center_vertical"
+            android:paddingLeft="@dimen/dp20"
+            android:text="6.测试网络速度质量"
+            android:textSize="@dimen/textSize18"
+            android:background="@color/priority_green"
+            android:layout_marginTop="@dimen/dp20"
+            app:rRadius="@dimen/dp20"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_crash_test"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
