--- a/AppServer/src/main/res/layout/activity_server_main.xml
+++ b/AppServer/src/main/res/layout/activity_server_main.xml
@@ -55,6 +55,21 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_log_server"/>
 
+
+        <com.yc.roundcorner.view.RoundTextView
+            android:id="@+id/tv_private_test"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="left|center_vertical"
+            android:paddingLeft="@dimen/dp20"
+            android:text="4.隐私合规获取敏感信息"
+            android:textSize="@dimen/textSize18"
+            android:background="@color/priority_green"
+            android:layout_marginTop="@dimen/dp20"
+            app:rRadius="@dimen/dp20"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_vibrator_test"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
