--- a/AppWidget/src/main/res/layout/activity_widget_main.xml
+++ b/AppWidget/src/main/res/layout/activity_widget_main.xml
@@ -67,4 +67,16 @@
         android:background="@color/priority_green"
         app:rRadius="@dimen/dp20" />
 
+    <com.yc.roundcorner.view.RoundTextView
+        android:id="@+id/tv_widget_zoom"
+        android:layout_marginTop="@dimen/dp10"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:gravity="left|center_vertical"
+        android:paddingLeft="@dimen/dp20"
+        android:text="6.图片查看器"
+        android:textSize="@dimen/textSize18"
+        android:background="@color/priority_green"
+        app:rRadius="@dimen/dp20" />
+
 </LinearLayout>
