--- a/AppCommon/src/main/res/layout/activity_file_test.xml
+++ b/AppCommon/src/main/res/layout/activity_file_test.xml
@@ -62,7 +62,7 @@
         android:layout_height="40dp"
         android:gravity="left|center_vertical"
         android:paddingLeft="@dimen/dp20"
-        android:text="5."
+        android:text="5.打开复制后的txt文件"
         android:textSize="@dimen/textSize18"
         android:background="@color/priority_green"
         app:rRadius="@dimen/dp20" />
