--- a/AppCommon/src/main/res/layout/activity_file_test.xml
+++ b/AppCommon/src/main/res/layout/activity_file_test.xml
@@ -79,6 +79,18 @@
         android:background="@color/priority_green"
         app:rRadius="@dimen/dp20" />
 
+    <com.yc.roundcorner.view.RoundTextView
+        android:id="@+id/tv_file_7"
+        android:layout_marginTop="@dimen/dp10"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:gravity="left|center_vertical"
+        android:paddingLeft="@dimen/dp20"
+        android:text="7.删除本地写入txt文件"
+        android:textSize="@dimen/textSize18"
+        android:background="@color/priority_green"
+        app:rRadius="@dimen/dp20" />
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
