--- a/AppWidget/src/main/res/layout/activity_shadow_view.xml
+++ b/AppWidget/src/main/res/layout/activity_shadow_view.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="@dimen/dp10">
+        android:padding="10dp">
 
 
         <com.yc.shadow.layout.ShadowLayout
@@ -54,7 +54,7 @@
                     android:gravity="center"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
-                    app:rRadius="@dimen/dp10"
+                    app:rRadius="10dp"
                     android:text="直角控件阴影"
                     android:textColor="#000" />
             </RelativeLayout>
@@ -80,7 +80,7 @@
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:background="@color/white"
-                app:rRadius="@dimen/dp10"
+                app:rRadius="10dp"
                 android:text="完全圆形圆角"
                 android:textColor="#000" />
 
@@ -104,7 +104,7 @@
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:background="@color/white"
-                app:rRadius="@dimen/dp10"
+                app:rRadius="10dp"
                 android:text="红色阴影"
                 android:textColor="#000" />
 
@@ -128,7 +128,7 @@
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:background="@color/white"
-                app:rRadius="@dimen/dp10"
+                app:rRadius="10dp"
                 android:text="随便改变阴影颜色,颜色透明度更改阴影清晰度"
                 android:textColor="#000" />
         </com.yc.shadow.layout.ShadowLayout>
@@ -151,7 +151,7 @@
                 android:paddingLeft="10dp"
                 android:background="@color/white"
                 android:paddingRight="10dp"
-                app:rRadius="@dimen/dp10"
+                app:rRadius="10dp"
                 android:text="阴影扩散区域改变"
                 android:textColor="#000" />
         </com.yc.shadow.layout.ShadowLayout>
@@ -174,7 +174,7 @@
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:background="@color/white"
-                app:rRadius="@dimen/dp10"
+                app:rRadius="10dp"
                 android:text="阴影x轴偏移"
                 android:textColor="#000" />
         </com.yc.shadow.layout.ShadowLayout>
@@ -197,7 +197,7 @@
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:background="@color/white"
-                app:rRadius="@dimen/dp10"
+                app:rRadius="10dp"
                 android:text="阴影y轴偏移"
                 android:textColor="#000" />
         </com.yc.shadow.layout.ShadowLayout>
@@ -220,7 +220,7 @@
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:background="@color/white"
-                app:rRadius="@dimen/dp10"
+                app:rRadius="10dp"
                 android:text="不偏移xy,让上和左阴影不可见(如titleBar)"
                 android:textColor="#000" />
         </com.yc.shadow.layout.ShadowLayout>
