--- a/AppTool/src/main/res/layout/activity_tool_main.xml
+++ b/AppTool/src/main/res/layout/activity_tool_main.xml
@@ -9,84 +9,78 @@
     android:orientation="vertical">
 
     <com.yc.roundcorner.view.RoundTextView
-        android:id="@+id/tv_widget_round"
+        android:id="@+id/tv_app_upload"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="left|center_vertical"
         android:paddingLeft="20dp"
-        android:text="1.圆角控件各种案例，别再用shape"
+        android:text="1.版本更新案例"
         android:textSize="18sp"
         android:background="@color/color_ffe935"
         app:rRadius="20dp" />
 
     <com.yc.roundcorner.view.RoundTextView
-        android:id="@+id/tv_widget_image"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="left|center_vertical"
         android:paddingLeft="20dp"
-        android:text="2.各种图片控件"
+        android:text="2."
         android:textSize="18sp"
         android:background="@color/color_ffe935"
         app:rRadius="20dp" />
 
     <com.yc.roundcorner.view.RoundTextView
-        android:id="@+id/tv_widget_span"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="left|center_vertical"
         android:paddingLeft="20dp"
-        android:text="3.各种span文本控件"
+        android:text="3."
         android:textSize="18sp"
         android:background="@color/color_ffe935"
         app:rRadius="20dp" />
 
     <com.yc.roundcorner.view.RoundTextView
-        android:id="@+id/tv_widget_chart"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="left|center_vertical"
         android:paddingLeft="20dp"
-        android:text="4.各种图表控件展示"
+        android:text="4."
         android:textSize="18sp"
         android:background="@color/color_ffe935"
         app:rRadius="20dp" />
 
     <com.yc.roundcorner.view.RoundTextView
-        android:id="@+id/tv_widget_shadow"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="left|center_vertical"
         android:paddingLeft="20dp"
-        android:text="5.阴影效果自定义控件"
+        android:text="5."
         android:textSize="18sp"
         android:background="@color/color_ffe935"
         app:rRadius="20dp" />
 
     <com.yc.roundcorner.view.RoundTextView
-        android:id="@+id/tv_widget_zoom"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="left|center_vertical"
         android:paddingLeft="20dp"
-        android:text="6.图片查看器"
+        android:text="6."
         android:textSize="18sp"
         android:background="@color/color_ffe935"
         app:rRadius="20dp" />
 
     <com.yc.roundcorner.view.RoundTextView
-        android:id="@+id/tv_widget_red"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="left|center_vertical"
         android:paddingLeft="20dp"
-        android:text="7.自定义完全解耦合小红点"
+        android:text="7."
         android:textSize="18sp"
         android:background="@color/color_ffe935"
         app:rRadius="20dp" />
