--- a/AppCommon/src/main/res/layout/activity_common_main.xml
+++ b/AppCommon/src/main/res/layout/activity_common_main.xml
@@ -218,6 +218,12 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="file文件"/>
+        <Button
+            android:id="@+id/btn_vp2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="vp2封装案例"/>
     </LinearLayout>
 
 
