修改tts在子线程播放bug

--- a/AppPlayer/src/main/res/layout/activity_audio.xml
+++ b/AppPlayer/src/main/res/layout/activity_audio.xml
@@ -103,7 +103,7 @@
             android:id="@+id/btn_url2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="播放网络tts2"/>
+            android:text="子线程播放网络tts2"/>
         <Button
             android:id="@+id/btn_tts_demo"
             android:layout_width="match_parent"
