--- a/AppWidget/src/main/res/layout/activity_widget_main.xml
+++ b/AppWidget/src/main/res/layout/activity_widget_main.xml
@@ -91,6 +91,18 @@
         android:background="@color/colorAccent"
         app:rRadius="20dp" />
 
+    <com.yc.roundcorner.view.RoundTextView
+        android:id="@+id/tv_widget_float"
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:gravity="left|center_vertical"
+        android:paddingLeft="20dp"
+        android:text="8.自定义悬浮控件案例"
+        android:textSize="18sp"
+        android:background="@color/colorAccent"
+        app:rRadius="20dp" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
