--- a/AppWidget/src/main/res/layout/activity_widget_float.xml
+++ b/AppWidget/src/main/res/layout/activity_widget_float.xml
@@ -38,7 +38,7 @@
         android:layout_height="40dp"
         android:gravity="left|center_vertical"
         android:paddingLeft="20dp"
-        android:text="3."
+        android:text="3.关闭全局可拖拽的悬浮窗"
         android:textSize="18sp"
         android:background="@color/colorAccent"
         app:rRadius="20dp" />
