--- a/AppWidget/src/main/res/layout/activity_widget_float.xml
+++ b/AppWidget/src/main/res/layout/activity_widget_float.xml
@@ -9,12 +9,24 @@
     android:orientation="vertical">
 
     <com.yc.roundcorner.view.RoundTextView
-        android:id="@+id/tv_widget_float1"
+        android:id="@+id/tv_widget_float1_1"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="left|center_vertical"
         android:paddingLeft="20dp"
-        android:text="1.可自由拖拽的悬浮窗"
+        android:text="1.1 展现可自由拖拽的悬浮窗"
+        android:textSize="18sp"
+        android:background="@color/colorAccent"
+        app:rRadius="20dp" />
+
+    <com.yc.roundcorner.view.RoundTextView
+        android:id="@+id/tv_widget_float1_2"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="10dp"
+        android:gravity="left|center_vertical"
+        android:paddingLeft="20dp"
+        android:text="1.2 关闭可自由拖拽的悬浮窗"
         android:textSize="18sp"
         android:background="@color/colorAccent"
         app:rRadius="20dp" />
@@ -26,7 +38,7 @@
         android:layout_height="40dp"
         android:gravity="left|center_vertical"
         android:paddingLeft="20dp"
-        android:text="2.全局可拖拽的悬浮窗"
+        android:text="2.1 展现全局可拖拽的悬浮窗"
         android:textSize="18sp"
         android:background="@color/colorAccent"
         app:rRadius="20dp" />
@@ -38,7 +50,7 @@
         android:layout_height="40dp"
         android:gravity="left|center_vertical"
         android:paddingLeft="20dp"
-        android:text="3.关闭全局可拖拽的悬浮窗"
+        android:text="2.2 关闭全局可拖拽的悬浮窗"
         android:textSize="18sp"
         android:background="@color/colorAccent"
         app:rRadius="20dp" />
