--- a/AppCommon/src/main/res/layout/activity_common_main.xml
+++ b/AppCommon/src/main/res/layout/activity_common_main.xml
@@ -237,6 +237,17 @@
             android:gravity="center"
             android:text="tab案例"/>
     </LinearLayout>
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/btn_encrypt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="加解密"/>
+    </LinearLayout>
 
 </LinearLayout>
