--- a/AppCommon/src/main/res/layout/activity_base_view.xml
+++ b/AppCommon/src/main/res/layout/activity_base_view.xml
@@ -152,4 +152,10 @@
         android:background="@color/priority_green"
         app:rRadius="@dimen/dp20" />
 
+    <ImageView
+        android:id="@+id/iv_image_view"
+        android:layout_marginTop="@dimen/dp10"
+        android:layout_width="200dp"
+        android:layout_height="100dp"/>
+
 </LinearLayout>
