--- a/AppWidget/src/main/res/layout/activity_image_view.xml
+++ b/AppWidget/src/main/res/layout/activity_image_view.xml
@@ -66,6 +66,7 @@
 
 
     <com.yc.appimageview.RoundImageView
+        android:id="@+id/riv_image6"
         android:layout_width="100dp"
         android:layout_height="80dp"
         android:layout_marginTop="10dp"
@@ -76,5 +77,12 @@
         app:layout_constraintLeft_toLeftOf="@+id/iv_image3"
         app:layout_constraintTop_toBottomOf="@+id/iv_image5" />
 
+    <ImageView
+        android:id="@+id/iv_image7"
+        android:layout_width="300dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintLeft_toLeftOf="@+id/riv_image6"
+        app:layout_constraintTop_toBottomOf="@+id/riv_image6"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
