--- a/AppCommon/src/main/res/layout/activity_common_main.xml
+++ b/AppCommon/src/main/res/layout/activity_common_main.xml
@@ -248,6 +248,12 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="加解密"/>
+        <Button
+            android:id="@+id/btn_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="图片"/>
     </LinearLayout>
 
 </LinearLayout>
