--- a/AppWidget/src/main/res/layout/view_real_blur_view.xml
+++ b/AppWidget/src/main/res/layout/view_real_blur_view.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
-    <com.yc.blurview.RealTimeBlurView
+    <com.yc.blurview.view.RealTimeBlurView
         android:id="@+id/blur_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
@@ -25,4 +26,4 @@
             android:text="毛玻璃效果"/>
     </RelativeLayout>
 
-</LinearLayout>
+</FrameLayout>
