feat：完善高斯模糊

--- a/AppWidget/src/main/res/layout/view_real_blur_view.xml
+++ b/AppWidget/src/main/res/layout/view_real_blur_view.xml
@@ -17,13 +17,11 @@
         android:layout_height="match_parent"
         android:background="#70000000"
         android:orientation="vertical">
-
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_centerInParent="true"
-            android:textSize="18sp"
-            android:text="毛玻璃效果"/>
+            android:background="@drawable/bg_kites_min"/>
     </RelativeLayout>
 
 </FrameLayout>
